--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "server": "json-server --watch src/data/db.json --port=8080 --delay=500"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.5"
+    "react-hook-form": "^7.54.2",
+    "react-router-dom": "^7.1.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
